<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

<!--    <activity-->
<!--        android:name="com.hiyama.anpikakuninproject.LoginActivity"-->
<!--        tools:layout="@layout/activity_login"/>-->


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hiyama.anpikakuninproject.ui.schedule.ScheduleFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hiyama.anpikakuninproject.ui.operationinfo.OperationInfoFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_operationInfo" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hiyama.anpikakuninproject.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_inquiry"
        android:name="com.hiyama.anpikakuninproject.ui.inquiry.InquiryFragment"
        android:label="@string/title_inquiry"
        tools:layout="@layout/fragment_inquiry"/>

</navigation>